# CBPai

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
db/: kitchen.sql  purchases.sql  seed.sql
deploy/: .env.example  docker-compose.yml
src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
